# SPRK32

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  utils.c  utils.h
src/compiler/: compiler.c  compiler.h  frontend.c  frontend.h  lexer.c  lexer.h  preproc.c  preproc.h
src/vms/: backend.c  backend.h  emulator.c
